--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,10 +20,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.2.4"
+    "sequelize": "^6.3.0",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
