--- a/Backend/.env.template
+++ b/Backend/.env.template
@@ -1,5 +1,5 @@
-DB_NAME = node-user
-DB_HOST = localhost
-DB_USER = root
+DB_NAME = SECRET_DBNAME
+DB_HOST = SECRET_DBHOST
+DB_USER = SECRET_DBUSER
 DB_PASS =
-PORT = 9000
+PORT = SECRET_PORT
