--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.8",
     "tailwindcss": "^1.4.6"
   },
   "scripts": {
     "build-css": "tailwindcss build src/styles.css -o public/styles.css",
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
