This is a test commit

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -5,8 +5,7 @@ COPY . /var/www/html
 RUN apt-get update -y && \
     apt-get upgrade -y && \ 
     apt-get install nodejs -y && \ 
-    apt-get install npm -y && \
-    npm install 
+    apt-get install npm -y 
 
 EXPOSE 80
 CMD npm start
