--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,8 @@
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "env-cmd": "^8.0.2",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4"
   }
 }
