added dev and test script run

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,9 @@
   "description": "Initial Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "env-cmd ./config/dev.env nodemon",
+    "test": "env-cmd ./config/test.env jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
