--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "env-cmd ./config/dev.env nodemon",
-    "test": "env-cmd ./config/test.env jest --detectOpenHandles"
+    "test": "env-cmd ./config/test.env jest --detectOpenHandles",
+    "dev-sync": "env-cmd ./config/dev.env node sync.js",
+    "test-sync": "env-cmd ./config/test.env node sync.js"
   },
   "repository": {
     "type": "git",
