--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,8 +7,8 @@
     "start": "node index.js",
     "dev": "env-cmd ./config/dev.env nodemon",
     "test": "env-cmd ./config/test.env jest --detectOpenHandles",
-    "dev-sync": "env-cmd ./config/dev.env node sync.js",
-    "test-sync": "env-cmd ./config/test.env node sync.js"
+    "dev-sync": "env-cmd ./config/dev.env node ./util/sync.js",
+    "test-sync": "env-cmd ./config/test.env node ./util/sync.js"
   },
   "repository": {
     "type": "git",
