--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#ignore node_modules
-/Backend/node_modules
-/Backend/.env
-/client/node_modules
+/node_modules
+/config
+/.gitignore
+/package-lock.json
