--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Initial Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "env-cmd ./config/dev.env nodemon",
+    "test": "env-cmd ./config/test.env jest --detectOpenHandles",
+    "dev-sync": "env-cmd ./config/dev.env node ./util/sync.js",
+    "test-sync": "env-cmd ./config/test.env node ./util/sync.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +34,16 @@
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "env-cmd": "^8.0.2",
+    "jest": "^26.1.0",
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules"
+    ]
   }
 }
